<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageDehazing">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:expandedTitleMarginStart="72dp"
                app:expandedTitleMarginBottom="28dp"
                app:expandedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Expanded"
                app:collapsedTitleTextAppearance="@style/TextAppearance.App.CollapsingToolbar.Collapsed"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:contentScrim="?attr/colorPrimary"
                app:statusBarScrim="?attr/colorPrimaryVariant">

                <ImageView
                    android:id="@+id/topAppBarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/spiderman"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true" />

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:menu="@menu/top_app_bar"
                    app:contentInsetStartWithNavigation="0dp"
                    app:navigationIcon="@drawable/ic_apple"
                    app:title="@string/page_title"
                    android:elevation="0dp"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Scrollable content -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="11"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/style_conversion_title"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                android:drawableLeft="@drawable/ic_brush_24px"
                                android:drawablePadding="6dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/style_conversion_supporting_text"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-10dp"
                    android:gravity="center"
                    android:weightSum="12">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_option"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="11"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/style_conversion_selection_title"
                                android:textAppearance="?attr/textAppearanceHeadline6" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp">
                                <RadioGroup
                                    android:id="@+id/style_conversion_radio_group"
                                    android:checkedButton="@+id/radio_button_style_cartoon"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center">
                                    <RadioButton
                                        android:id="@+id/radio_button_style_cartoon"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_cartoon"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_pencil"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_pencil"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_color_pencil"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_color_pencil"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_warm"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_warm"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_wave"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_wave"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_lavender"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_lavender"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_mononoke"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_mononoke"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_scream"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_scream"/>
                                    <RadioButton
                                        android:id="@+id/radio_button_style_gothic"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:text="@string/style_gothic"/>

                                </RadioGroup>
                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:weightSum="12"
                    android:layout_marginTop="-10dp">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="11"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="5dp">

                        <ImageView
                            android:id="@+id/img1"
                            android:layout_width="match_parent"
                            android:layout_height="215dp"
                            android:src="@drawable/add_image_24px" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="-10dp"
                    android:weightSum="12">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="11"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardElevation="5dp">

                        <ImageView
                            android:id="@+id/img2"
                            android:layout_width="match_parent"
                            android:layout_height="215dp"
                            android:src="@drawable/image_24px"/>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="80dp">

                    <Button
                        android:id="@+id/btn_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.Icon"
                        android:minLines="2"
                        android:text="@string/button_name"
                        app:icon="@drawable/ic_magic_button_24px"/>

                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</LinearLayout>